--- a/HelloCompat/app/src/main/res/values/colors.xml
+++ b/HelloCompat/app/src/main/res/values/colors.xml
@@ -4,49 +4,24 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <integer-array name="colors">
-        <item>#F44336</item>
-        <item>#E91E63</item>
-        <item>#9C27B0</item>
-        <item>#673AB7</item>
-        <item>#3F51B5</item>
-        <item>#2196F3</item>
-        <item>#03A9F4</item>
-        <item>#00BCD4</item>
-        <item>#009688</item>
-        <item>#4CAF50</item>
-        <item>#8BC34A</item>
-        <item>#CDDC39</item>
-        <item>#FFEB3B</item>
-        <item>#FFC107</item>
-        <item>#FF9800</item>
-        <item>#FF5722</item>
-        <item>#795548</item>
-        <item>#9E9E9E</item>
-        <item>#607D8B</item>
-        <item>#000000</item>
-    </integer-array>
-
-    <array name="color_names">
-        <item>red</item>
-        <item>pink</item>
-        <item>purple</item>
-        <item>deep_purple</item>
-        <item>indigo</item>
-        <item>blue</item>
-        <item>light_blue</item>
-        <item>cyan</item>
-        <item>teal</item>
-        <item>green</item>
-        <item>light_green</item>
-        <item>lime</item>
-        <item>yellow</item>
-        <item>amber</item>
-        <item>orange</item>
-        <item>deep_orange</item>
-        <item>brown</item>
-        <item>grey</item>
-        <item>blue_grey</item>
-        <item>black</item>
-    </array>
+    <color name="red">#F44336</color>
+    <color name="pink">#E91E63</color>
+    <color name="purple">#9C27B0</color>
+    <color name="deep_purple">#673AB7</color>
+    <color name="indigo">#3F51B5</color>
+    <color name="blue">#2196F3</color>
+    <color name="light_blue">#03A9F4</color>
+    <color name="cyan">#00BCD4</color>
+    <color name="teal">#009688</color>
+    <color name="green">#4CAF50</color>
+    <color name="light_green">#8BC34A</color>
+    <color name="lime">#CDDC39</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="amber">#FFC107</color>
+    <color name="orange">#FF9800</color>
+    <color name="deep_orange">#FF5722</color>
+    <color name="brown">#795548</color>
+    <color name="grey">#9E9E9E</color>
+    <color name="blue_grey">#607D8B</color>
+    <color name="black">#000000</color>
 </resources>
