--- a/DroidCafe/app/src/main/res/layout/activity_order.xml
+++ b/DroidCafe/app/src/main/res/layout/activity_order.xml
@@ -73,12 +73,13 @@
 
     <EditText
         android:id="@+id/phone_text"
-        android:layout_width="wrap_content"
+        android:layout_width="134dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
-        android:inputType="phone"
         android:hint="@string/enter_phone_hint"
+        android:inputType="phone"
         app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
         app:layout_constraintStart_toEndOf="@+id/phone_label" />
 
@@ -142,7 +143,16 @@
             android:text="@string/pick_up" />
     </RadioGroup>
 
-
+    <Spinner
+        android:id="@+id/label_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/phone_text"
+        app:layout_constraintTop_toBottomOf="@+id/address_text" />
 
 
 </android.support.constraint.ConstraintLayout>
