--- a/DroidCafe/app/src/main/res/menu/menu_main.xml
+++ b/DroidCafe/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,27 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_contact"
+        android:title="Contact"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_order"
+        android:orderInCategory="10"
+        android:title="Order"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_status"
+        android:orderInCategory="20"
+        android:title="Status"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_favorites"
+        android:orderInCategory="30"
+        android:title="Favorites"
+        app:showAsAction="never" />
 </menu>
