--- a/Scorekeeper/app/src/main/res/layout/activity_main.xml
+++ b/Scorekeeper/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,12 @@
         android:layout_weight="1">
         <ImageButton
             android:id="@+id/team_1_decrease_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_minus" />
+            android:background="@drawable/button_background"
+            app:srcCompat="@drawable/ic_subtract" />
 
         <TextView
             android:id="@+id/team_1_score"
@@ -28,10 +29,11 @@
 
         <ImageButton
             android:id="@+id/team_1_increase_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/button_background"
             app:srcCompat="@drawable/ic_add" />
 
         <TextView
@@ -48,11 +50,12 @@
         android:layout_weight="1">
         <ImageButton
             android:id="@+id/team_2_decrease_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_minus" />
+            android:background="@drawable/button_background"
+            app:srcCompat="@drawable/ic_subtract" />
 
         <TextView
             android:id="@+id/team_2_score"
@@ -63,10 +66,11 @@
 
         <ImageButton
             android:id="@+id/team_2_increase_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/button_background"
             app:srcCompat="@drawable/ic_add" />
 
         <TextView
