--- a/Scorekeeper/app/src/main/res/layout/activity_main.xml
+++ b/Scorekeeper/app/src/main/res/layout/activity_main.xml
@@ -11,74 +11,58 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/team_1_decrease_button"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/button_background"
-            app:srcCompat="@drawable/ic_subtract" />
-
         <TextView
-            android:id="@+id/team_1_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <ImageButton
-            android:id="@+id/team_1_increase_button"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/button_background"
-            app:srcCompat="@drawable/ic_add" />
-
-        <TextView
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="Team 1" />
+
+        <ImageButton
+            android:id="@+id/team_1_decrease_button"
+            style="@style/ScoreDecreaseButton"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
+
+        <TextView
+            android:id="@+id/team_1_score"
+            style="@style/ScoreText" />
+
+        <ImageButton
+            android:id="@+id/team_1_increase_button"
+            style="@style/ScoreIncreaseButton"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/team_2_decrease_button"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/button_background"
-            app:srcCompat="@drawable/ic_subtract" />
-
         <TextView
-            android:id="@+id/team_2_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <ImageButton
-            android:id="@+id/team_2_increase_button"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/button_background"
-            app:srcCompat="@drawable/ic_add" />
-
-        <TextView
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="Team 2" />
+
+        <ImageButton
+            android:id="@+id/team_2_decrease_button"
+            style="@style/ScoreDecreaseButton"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
+
+        <TextView
+            android:id="@+id/team_2_score"
+            style="@style/ScoreText" />
+
+        <ImageButton
+            android:id="@+id/team_2_increase_button"
+            style="@style/ScoreIncreaseButton"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
 </LinearLayout>
