--- a/MaterialMe/app/src/main/res/layout/activity_detail.xml
+++ b/MaterialMe/app/src/main/res/layout/activity_detail.xml
@@ -17,8 +17,10 @@
         <TextView
             android:id="@+id/detail_sport_title"
             style="@style/TextAppearance.AppCompat.Headline"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/detail_sport_image"
             android:padding="16dp"
             android:text="@string/title_placeholder" />
 
