--- a/MaterialMe/app/src/main/res/layout/list_item.xml
+++ b/MaterialMe/app/src/main/res/layout/list_item.xml
@@ -4,22 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp" >
-    <ImageView
-        android:id="@+id/sport_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true" />
-    
     <RelativeLayout
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/sport_image" >
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/sport_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true" />
+
         <TextView
             android:id="@+id/sport_title"
             style="@style/TextAppearance.AppCompat.Headline"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/sport_image"
             android:padding="8dp"
             android:text="@string/title_placeholder" />
 
