--- a/MaterialMe/app/src/main/res/layout/activity_detail.xml
+++ b/MaterialMe/app/src/main/res/layout/activity_detail.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/detail_sport_news_title"
-            style="@style/TextAppearance.AppCompat.Subhead"
+            style="@style/SportsDetailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/detail_sport_title"
