--- a/MaterialMe/app/src/main/res/values/styles.xml
+++ b/MaterialMe/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SportsTitle" parent="TextAppearance.AppCompat.Headline"/>
+    <style name="SportsDetailText" parent="TextAppearance.AppCompat.Subhead"/>
+    <style name="SportsDetailTitle" parent="TextAppearance.AppCompat.Headline"/>
 </resources>
